<resources>
    <string name="create_acc">Create Account</string>
    <string name="username">username</string>
    <string name="enter_username">Enter Username</string>
    <string name="test_name">Max Muster</string>
    <string name="username_taken">Username is already taken.</string>
    <string name="database_error">Database error. Try again.</string>
    <string name="app_name">GyroDraw</string>
    <string name="no_internet">No Internet connection</string>
    <string name="unknown_error">Unknown error</string>
    <string name="error_message">Error message</string>
    <string name="sign_out">Sign out</string>
    <string name="delete_account">Delete account</string>
    <string name="app_logo">App logo</string>
    <string name="trophies_button_text">Trophies:</string>
    <string name="stars_button_text">Stars:</string>
    <string name="league_1">League 1</string>
    <string name="league_2">League 2</string>
    <string name="league_3">League 3</string>
    <string name="league_1_description">0 &#8211; 99</string>
    <string name="league_2_description">100 &#8211; 199</string>
    <string name="league_3_description">200+</string>
    <string name="league_1_difficulty">Drawing difficulty: basic</string>
    <string name="league_2_difficulty">Drawing difficulty: advanced</string>
    <string name="league_3_difficulty">Drawing difficulty: expert</string>
    <string name="draw">Draw!</string>
    <string name="fly">Fly!</string>
    <string name="clear">Clear</string>
    <string name="create_account">Create account</string>
    <string name="user_name">Username</string>
    <string name="cross">X</string>
    <string name="drawing">Drawing</string>
    <string name="home">Home</string>
    <string name="players_ready">Players ready</string>
    <string name="vote">Vote for what you want to draw</string>
    <string name="title_activity_profile_page">ProfilePage</string>
    <string name="total_games">Total games:</string>
    <string name="games_won">Games won:</string>
    <string name="zero">0</string>
    <string name="average_stars">Average stars:</string>
    <string name="max_trophies">Max trophies:</string>
    <string name="profile">Profile</string>
    <string name="usernameMustNotBeNull">Username must not be null</string>
    <string name="usernameMustNotBeEmpty">Username must not be empty</string>
    <string name="usernameTaken">Username already taken, try again</string>
    <string name="enter_name_here">Enter name here</string>
    <string name="battle_log">Battle log</string>
    <string name="initial_waiting_timer">10</string>
    <string name="leave">Leave</string>
    <string name="practice">PRACTICE !</string>
    <string name="special">SPECIAL !</string>
    <string name="friendsFilter">Friends</string>
    <string name="buySuccess">Purchase Successful</string>
    <string name="buyError">Not enough stars</string>
    <string name="success">Success</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="new_friend_request">New friend request</string>
    <string name="facebook_app_id">348464052628931</string>
    <string name="empty_battle_log">You have not played any game recently</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="usernameValid">Valid username</string>
    <string name="usernameTooShort">Username is too short</string>
    <string name="usernameTooLong">Username is too long</string>
    <string name="usernameIllegalChar">Username must not contain</string>
    <string name="successfulImageDownload">Successfully saved image to /Download/Gyrodraw</string>
    <string name="already_logged_in">You have already logged in on another device! Waiting…</string>
    <string name="disconnected">Disconnected</string>
    <string name="error">Error</string>
    <string name="you_have_been_disconnected">You have been disconnected</string>
    <string name="final_ranking">Final Ranking</string>
    <string name="gallery">Gallery</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="emptyGalleryText">You don\'t have any pictures yet</string>
    <string name="are_you_sure_gallery">Do you really want to delete the whole gallery?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="shop">Shop</string>
    <string name="leaderboard">Leaderboard</string>
</resources>
