<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:id="@+id/friendRequestPopUp"
  android:layout_width="350dp"
  android:layout_height="wrap_content"
  android:layout_gravity="center"
  android:background="@color/colorPrimaryDark"
  android:gravity="center"
  android:orientation="vertical">

  <TextView
    android:id="@+id/requestSender"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:gravity="center"
    android:includeFontPadding="false"
    android:text="@string/are_you_sure_gallery"
    android:textColor="@color/colorDrawYellow"
    android:textSize="25sp" />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <Button
      android:id="@+id/yesButton"
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="4dp"
      android:layout_marginBottom="8dp"
      android:layout_weight="1"
      android:background="@color/colorGreen"
      android:text="@string/yes"
      android:textColor="@color/colorPrimaryDark"
      android:textSize="30sp"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="parent" />

    <Button
      android:id="@+id/noButton"
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:layout_marginStart="4dp"
      android:layout_marginEnd="8dp"
      android:layout_marginBottom="8dp"
      android:layout_weight="1"
      android:background="@color/colorExitRed"
      android:text="@string/no"
      android:textColor="@color/colorPrimaryDark"
      android:textSize="30sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent" />

  </LinearLayout>
</LinearLayout>