<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/usernamePopUp"
    android:layout_width="352dp"
    android:layout_height="175dp"
    android:layout_gravity="center"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <TextView
        android:id="@+id/crossText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="12dp"
        android:gravity="top"
        android:includeFontPadding="false"
        android:text="@string/cross"
        android:textColor="@color/colorDrawYellow"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="390dp"
        android:layout_height="49dp"
        android:background="@color/colorGrey"
        android:text="@string/delete_account"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.873" />

    <Button
        android:id="@+id/signOutButton"
        android:layout_width="390dp"
        android:layout_height="49dp"
        android:layout_marginBottom="46dp"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:background="@color/colorGrey"
        android:text="@string/sign_out"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.678" />

    <TextView
        android:id="@+id/game_lost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Games lost"
        android:textColor="@color/colorBlueTrophy"
        android:visibility="invisible"
        tools:layout_editor_absoluteX="141dp"
        tools:layout_editor_absoluteY="94dp" />

    <TextView
        android:id="@+id/averageStars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Average_stars"
        android:textColor="@color/colorBlueTrophy"
        android:visibility="invisible"
        tools:layout_editor_absoluteX="132dp"
        tools:layout_editor_absoluteY="131dp" />

    <TextView
        android:id="@+id/maxTrophies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="maxTrophies"
        android:textColor="@color/colorBlueTrophy"
        android:visibility="invisible"
        tools:layout_editor_absoluteX="136dp"
        tools:layout_editor_absoluteY="167dp" />

    <TextView
        android:id="@+id/games_won"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Won games"
        android:textColor="@color/colorBlueTrophy"
        android:visibility="invisible"
        tools:layout_editor_absoluteX="140dp"
        tools:layout_editor_absoluteY="60dp" />

</android.support.constraint.ConstraintLayout>